--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
 }
 
 .input {
-  border: 1px solid #ddd;
-  border-radius: 1px;
+  border: 1px solid grey;
+  border-radius: 5px;
   height: 60px;
-  padding-right: 15px;
-  padding-top: 10px;
+  padding-right: 20px;
+  padding-top: 15px;
   text-align: right;
   margin-right: 6px;
   font-size: 2.5rem;
@@ -30,7 +30,7 @@ body {
 }
 
 .input:hover {
-  border: 1px solid #bbb;
+  border: 1px solid grey;
   -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
@@ -43,14 +43,14 @@ body {
 
 .operators div {
   display: inline-block;
-  border: 1px solid #bbb;
+  border: 1px solid grey;
   border-radius: 1px;
   width: 80px;
   text-align: center;
   padding: 10px;
   margin: 20px 4px 10px 0;
   cursor: pointer;
-  background-color: #ddd;
+  background-color: grey;
   transition: border-color 0.2s ease-in-out, background-color 0.2s,
     box-shadow 0.2s;
 }
@@ -59,7 +59,7 @@ body {
   background-color: #ddd;
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  border-color: #aaa;
+  border-color: grey;
 }
 
 .operators div:active {
@@ -72,23 +72,23 @@ body {
 
 .numbers div {
   display: inline-block;
-  border: 1px solid #ddd;
+  border: 1px solid grey;
   border-radius: 1px;
   width: 80px;
   text-align: center;
   padding: 10px;
   margin: 10px 4px 10px 0;
   cursor: pointer;
-  background-color: #f9f9f9;
+  background-color: grey;
   transition: border-color 0.2s ease-in-out, background-color 0.2s,
     box-shadow 0.2s;
 }
 
 .numbers div:hover {
-  background-color: #f1f1f1;
+  background-color: grey;
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  border-color: #bbb;
+  border-color: grey;
 }
 
 .numbers div:active {
@@ -97,7 +97,7 @@ body {
 
 div.equal {
   display: inline-block;
-  border: 1px solid #3079ed;
+  border: 1px solid black;
   border-radius: 1px;
   width: 17%;
   text-align: center;
@@ -105,13 +105,14 @@ div.equal {
   margin: 10px 6px 10px 0;
   vertical-align: top;
   cursor: pointer;
-  color: #fff;
-  background-color: #4d90fe;
+  color: grey;
+  background-color: black;
   transition: all 0.2s ease-in-out;
 }
 
 div.equal:hover {
-  background-color: #307cf9;
+  background-color: black;
+  color: grey;
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   border-color: #1857bb;
